# posokanei-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.grok/skills/posokanei-api/: SKILL.md
docs/: API_MAP.md  DISCOVERY.md  api_map.json
docs/ux-audit/: UX_TASK_MAP_AND_FLAWS.md  browser-limit.txt  timings.json
examples/: sample_basket.txt
posokanei/: __init__.py  basket.py  cli.py  client.py
scripts/: live_exercise.sh
tests/: test_basket.py  test_client_unit.py  test_ux_audit_report.py
